<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:context=".MainActivityRegistro"
              tools:showIn="@layout/activity_main_registro"
              android:padding="15sp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/titulo"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />
    </LinearLayout>

    <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/tvHeader"
            android:background="@color/colorPrimary" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/etCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:padding="30dp"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/etNombreR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:singleLine="true"
                    android:inputType="textPersonName"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/etPwdR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contra"
                    android:singleLine="true"
                    android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/etnumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numero"
                android:singleLine="true"
                android:inputType="text|phone"/>

    </LinearLayout>

</LinearLayout>
